<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory
        android:title="@string/pref_profile_title"
        android:key="pref_key_profile_settings">
        <!-- Edit profile -->
        <PreferenceScreen
            android:key="button_edit_profile_key"
            android:title="@string/pref_profile_edit_title"
            android:persistent="false">
            <CheckBoxPreference
                android:key="pref_key_auto_delete"
                android:summary="@string/pref_summary_auto_delete"
                android:title="@string/pref_title_auto_delete"
                android:defaultValue="false"/>
            <Preference
                android:key="pref_key_sms_delete_limit"
                android:dependency="pref_key_auto_delete"
                android:summary="@string/pref_summary_delete_limit"
                android:title="@string/pref_title_sms_delete"/>
            <Preference
                android:key="pref_key_mms_delete_limit"
                android:dependency="pref_key_auto_delete"
                android:summary="@string/pref_summary_delete_limit"
                android:title="@string/pref_title_mms_delete"/>
            <Preference android:title="@string/pref_summary_delete_limit" >
                <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.google.com" />
            </Preference>
        </PreferenceScreen>

        <!-- Change password -->
        <PreferenceScreen
            android:key="button_edit_profile_key"
            android:title="@string/pref_password_change_title"
            android:persistent="false">

        </PreferenceScreen>

        <!-- Private profile -->
        <SwitchPreference
            android:key="toggle_private_profile"
            android:title="@string/pref_private_profile_title"
            android:summary="@string/pref_private_profile_summary">

        </SwitchPreference>


    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_settings_title"
        android:key="pref_key_device_settings">
        <CheckBoxPreference
            android:key="pref_key_auto_delete"
            android:summary="@string/pref_summary_auto_delete"
            android:title="@string/pref_title_auto_delete"
            android:defaultValue="false"/>
        <Preference
            android:key="pref_key_sms_delete_limit"
            android:dependency="pref_key_auto_delete"
            android:summary="@string/pref_summary_delete_limit"
            android:title="@string/pref_title_sms_delete"/>
        <Preference
            android:key="pref_key_mms_delete_limit"
            android:dependency="pref_key_auto_delete"
            android:summary="@string/pref_summary_delete_limit"
            android:title="@string/pref_title_mms_delete"/>
        <Preference android:title="@string/pref_summary_delete_limit" >
            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.google.com" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>