<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/wanderlust_logo"

        android:id="@+id/form"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:hint="@string/register_email"

                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_name_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:hint="@string/register_first_name"

                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last_name_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:hint="@string/register_last_name"

                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:maxLines="1"

                    android:hint="@string/register_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirm_password_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:maxLines="1"

                    android:hint="@string/register_confirm_pwd"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/register_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"


                android:layout_gravity="center"
                android:background="@color/menuColor"
                android:text="@string/register_button"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />



        </LinearLayout>


    </RelativeLayout>
    <ImageView
        android:id="@+id/wanderlust_logo"
        android:layout_width="220dp"
        android:layout_height="160dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="-15dp"


        android:src="@drawable/logo" />


</RelativeLayout>